--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-HELP.md
+# Maven
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+.env
+
+# Logs
+*.log
 
 ### IntelliJ IDEA ###
 .idea
@@ -19,15 +20,4 @@ target/
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
+docker/mysql/data/
