--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-# Maven
+HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-.env
-
-# Logs
-*.log
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
@@ -20,4 +19,22 @@ build/
 *.iml
 *.ipr
 
-docker/mysql/data/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+.env
+mysql
+
+docker/mysql/data
+docker-compose.*.yml
+
+
+src/main/resources/application.properties
+!src/main/resources/application.properties.example
