--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,8 @@
 spring.application.name=inventory-service
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service
-spring.datasource.username=usermysql
-spring.datasource.password=mysql
+
+spring.datasource.url=jdbc:mysql://mysql:3306/inventory_service?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
@@ -9,11 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/
+spring.flyway.locations=classpath:db/migration
+
+server.port=8082
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.client= DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet= DEBUG
-
-server.port=8082
