--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,5 +1,7 @@
 spring.application.name=inventory-service
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service
+
+spring.datasource.url=jdbc:mysql://mysql:3306/order_service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+
 spring.datasource.username=usermysql
 spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,11 +11,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/
-
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.web.client= DEBUG
-logging.level.org.springframework.web.servlet.DispatcherServlet= DEBUG
+spring.flyway.locations=classpath:db/migration
 
 server.port=8082
