--- a/docker-compose-examples/docker-compose.override.yml
+++ b/docker-compose-examples/docker-compose.override.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   mysql:
     image: mysql:8.0.32
@@ -29,7 +27,7 @@ services:
     ports:
       - "8082:8082"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/inventory_service?useSSL=false&serverTimezone=UTC
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/inventory_service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASS}
       SPRING_PROFILES_ACTIVE: docker
@@ -41,6 +39,5 @@ services:
 
 networks:
   microservices-net:
-    driver: bridge
-  my-network:
     external: true
+    
